# LAB5_AirDefenceSim

./: CMakeLists.txt  README.md
include/core/: ComplexWave.hpp  IntersectionMath.hpp  Material.hpp  Vector3D.hpp
include/entities/: Obstacle.hpp  Radar.hpp  Target.hpp
include/physics/: IPhysicalObject.hpp  WaveEngine.hpp
include/systems/: SimulationWorld.hpp
include/ui/: SfmlVisualizer.hpp
src/: main.cpp
src/core/: IntersectionMath.cpp
src/entities/: Obstacle.cpp  Radar.cpp  Target.cpp
src/physics/: WaveEngine.cpp
src/systems/: SimulationWorld.cpp
src/ui/: SfmlVisualizer.cpp
